# csjl_nvo

./: .gitignore  AjaxFileUploader.inc.php  BarcodeReader.js  DB.php  DecoderWorker.js  Enviaemail.php  JsHttpRequest.js  JsHttpRequest.php  NumberConverter.php  NumberConverter20180409.php  PdfToText.phpclass.php  ProcessHandler.class.php  README.md  WebClientPrint.php  WebFX-ContextMenu.css  WriteTag.php  WriteTag20180214.php  WriteTag_x.php  WriteTag_x20180317.php  agn.css  alta_menus.sql  alta_menus_campos.sql  alta_menus_pg_group.sql  alta_menus_pg_tables.sql  altaadjuntara.php  altaadjuntaran.php  altaautomatica.php  autoriza_usuario.sql  azul.css  broseaing.js  broseaing20121123  broseaing20130115.js  broseaing20140320.js  broseaing20150602.js  broseaing20150605.js  broseaing20150616.js  broseaing20150630.js  broseaing20150702.js  broseaing20150923.js  broseaing201604009.js  (+322 more)
chilkat-9.5.0-php-5.3-x86_64-linux/: README.txt  chilkat_9_5_0.php
fe/: fiel.js  prueba_j.html  val_comunes.js
fef/: agn.min.css  fiel.js  jquery.mobile.structure-1.4.5.css  prueba_j.html  val_comunes.js
fefA/: cadenaoriginal_3_3.xslt
fefN/: cadenaoriginal_3_3.js  class_logmenus.php  conneccion.php  eventos_servidor_class.php  fiel.js  firma_digital_class.php  manifest.json  menudata.php  prueba_j.html  seguridad_class.php  soldatos.php  (+1 more)
llaves/phrasendrescher-1.0/src/: Makefile.am  Makefile.in  dictionary.c  dictionary.h  incremental.c  incremental.h  phrasendrescher.c  phrasendrescher.h  rewriter.c  rewriter.h  rules.c  rules.h  source.c  source.h  utils.c  utils.h  worker.c  worker.h
(+93 files in other folders)
