phrasendrescherprgdir=$(prefix)/bin
phrasendrescherprg_PROGRAMS=phrasendrescher
phrasendrescher_LDFLAGS=-lcrypto
phrasendrescher_CFLAGS=-Wall -O2
phrasendrescher_SOURCES=phrasendrescher.c worker.c utils.c source.c dictionary.c incremental.c rewriter.c rules.c \
			phrasendrescher.h worker.h utils.h source.h dictionary.h incremental.h rewriter.h rules.h 
